--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --main-bg-color: #FF6060;
 }
 
 code {
