--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,5 @@
-.App {
-  text-align: center;
+.conteneur {
+  margin: auto;
+  margin: 40px 100px;
+  align-items: center;
 }/*# sourceMappingURL=App.css.map */
