--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,9 +1,9 @@
 .header {
-  margin-bottom: 45px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   line-height: 68px;
+  margin-bottom: 50px;
 }
 
 .header-links a {
@@ -19,4 +19,4 @@
 
 .logo {
   height: 68px;
-}/*# sourceMappingURL=Header.css.map */
+}/*# sourceMappingURL=header.css.map */
