--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,4 +1,8 @@
 .footer {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  margin-top: 50px;
   background-color: black;
   height: 210px;
   color: white;
