--- a/src/styles/logements.scss
+++ b/src/styles/logements.scss
@@ -1,12 +1,21 @@
 .logements {
-    padding: 0 30px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 30px;
+    grid-template-columns: repeat(3, 30%);
+    justify-content: center;
+    column-gap: 5%;
+    row-gap: 50px;
+    padding: 50px 55px;
+    border-radius:25px;
+    background-color: var(--bg-color);
+}
+
+.logements a {
+    text-decoration: none;
 }
 
 .logements-card {
-    padding: 20px;
+    position: relative;
+    height: 340px;
     color:white;
     font-weight: bold;
     font-size: 18px;
@@ -16,7 +25,17 @@
 
 .logements-card img {
     width:100%;
-    height: 340px;
+    height: 100%;
     object-fit: cover;
     border-radius: 10px;
+}
+
+.logements-card-title {
+    position: absolute;
+    left:0;
+    right:0px;
+    bottom:0;
+    border-radius: 10px;
+    padding: 15px;
+    background: linear-gradient(transparent, rgb(0,0,0,0.5));
 }
