--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,10 +1,11 @@
-.about img {
-    height:223px;
+.valeurs {
     width: 100%;
-    object-fit: cover;
-    border-radius: 25px;
 }
 
 .valeurs {
+    .depliant {
     width: 80%;
+    margin: auto;
+    margin-top: 25px;
+    }
 }
