--- a/src/styles/depliant.scss
+++ b/src/styles/depliant.scss
@@ -2,9 +2,11 @@
     color: var(--bg-color-text);
     background-color: var(--main-bg-color);
     border-radius: 10px;
+    margin-top: 20px;
 }
 
 .depliant-title {
+    position: relative;
     padding: 15px;
     display: flex;
     justify-content: space-between;
@@ -12,6 +14,20 @@
 }
 
 .depliant-content {
-    display: none;
-    padding: 15px;
+    background-color: #F6F6F6;
+    color: var(--main-color);
+    height: 0;
+    opacity: 0;
+}
+
+.depliant-arrow {
+    position: absolute;
+    right: 20px;
+    top: 22px;
+    height: 10px;
+    width: 10px;
+    border-top: 3px solid white;
+    border-left: 3px solid white;
+    transform: rotate(45deg);
+    border-top-left-radius: 2px;
 }
