--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,20 @@
 body {
   margin: 40px 100px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue' sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --main-color: black;
   --main-bg-color: #FF6060;
   --bg-color: #F6F6F6;
   --bg-color-text: white;
+  font-family: montserrat;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: local("Montserrat-VariableFont_wght"),
+    url("../fonts/montserrat/Montserrat-VariableFont_wght.ttf") format("truetype");
 }
 
 a {
