--- a/src/styles/logement.css
+++ b/src/styles/logement.css
@@ -4,6 +4,7 @@
 }
 
 .card-encart {
+  margin-top: 20px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -29,6 +30,7 @@
   -o-object-fit: cover;
      object-fit: cover;
   height: 64px;
+  margin-left: 5px;
 }
 
 .card-tags-and-rating {
@@ -39,8 +41,8 @@
 }
 
 .card-tag {
-  margin: 15px;
-  padding: 10px;
+  margin-right: 15px;
+  padding: 10px 20px;
   border-radius: 25px;
   background-color: var(--main-bg-color);
   color: var(--bg-color-text);
