--- a/src/styles/depliant.css
+++ b/src/styles/depliant.css
@@ -1,23 +1,28 @@
 .depliant {
   color: var(--bg-color-text);
-  background-color: var(--main-bg-color);
   border-radius: 10px;
   margin-top: 20px;
 }
 
 .depliant-title {
+  background-color: var(--main-bg-color);
+  border-radius: 10px;
   position: relative;
   padding: 15px;
   display: flex;
   justify-content: space-between;
   cursor: pointer;
+  z-index: 5;
 }
 
 .depliant-content {
   background-color: #F6F6F6;
-  color: var(--main-color);
+  padding: 15px;
+  visibility: hidden;
   height: 0;
-  opacity: 0;
+  transform: translateY(-20%);
+  transition: transform 300ms linear;
+  color: var(--main-color);
 }
 
 .depliant-arrow {
