--- a/src/styles/depliant.scss
+++ b/src/styles/depliant.scss
@@ -1,22 +1,28 @@
 .depliant {
     color: var(--bg-color-text);
-    background-color: var(--main-bg-color);
     border-radius: 10px;
     margin-top: 20px;
 }
 
 .depliant-title {
+    background-color: var(--main-bg-color);
+    border-radius: 10px;
     position: relative;
     padding: 15px;
     display: flex;
     justify-content: space-between;
     cursor: pointer;
+    z-index:5;
 }
 
 .depliant-content {
     background-color: #F6F6F6;
+    padding: 15px;
+    visibility: hidden;
+    height: 0;
+    transform: translateY(-20%);
+    transition: transform 300ms linear;
     color: var(--main-color);
-    display: none;
 }
 
 .depliant-arrow {
